force-app/main/default/objects/Panel_de_Triggers__mdt/Panel_de_Triggers__mdt.object-meta.xml
<CustomObject>
    <label>Panel de Triggers</label>
    <pluralLabel>Paneles de Triggers</pluralLabel>
</CustomObject>