force-app/main/default/objects/Panel_de_Triggers__mdt/fields/After_Delete__c.field-meta.xml
<CustomField>
    <fullName>After_Delete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enables After Delete</description>
    <inlineHelpText>Enables After Delete</inlineHelpText>
    <label>After Delete</label>
    <type>Checkbox</type>
</CustomField>