force-app/main/default/objects/Panel_de_Triggers__mdt/fields/After_Insert__c.field-meta.xml
<CustomField>
    <fullName>After_Insert__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enables After Insert in trigger</description>
    <inlineHelpText>Enables After Insert in trigger</inlineHelpText>
    <label>After Insert</label>
    <type>Checkbox</type>
</CustomField>