force-app/main/default/objects/Panel_de_Triggers__mdt/fields/After_Update__c.field-meta.xml
<CustomField>
    <fullName>After_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enables the after update Excecution</description>
    <inlineHelpText>Enables the after update Excecution</inlineHelpText>
    <label>After Update</label>
    <type>Checkbox</type>
</CustomField>