force-app/main/default/objects/Panel_de_Triggers__mdt/fields/Before_Delete__c.field-meta.xml
<CustomField>
    <fullName>Before_Delete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enables the before Delete Trigger</description>
    <inlineHelpText>Enables the before Delete Trigger</inlineHelpText>
    <label>Before Delete</label>
    <type>Checkbox</type>
</CustomField>