force-app/main/default/objects/Panel_de_Triggers__mdt/fields/Before_Insert__c.field-meta.xml
<CustomField>
    <fullName>Before_Insert__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enables Before Insert Trigger</description>
    <inlineHelpText>Enables Before Insert Trigger</inlineHelpText>
    <label>Before Insert</label>
    <type>Checkbox</type>
</CustomField>