force-app/main/default/objects/Panel_de_Triggers__mdt/fields/Before_Update__c.field-meta.xml
<CustomField>
    <fullName>Before_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enables the before Update Trigger</description>
    <inlineHelpText>Enables the before Update Trigger</inlineHelpText>
    <label>Before Update</label>
    <type>Checkbox</type>
</CustomField>